--- a/package.json
+++ b/package.json
@@ -25,8 +25,16 @@
   },
   "homepage": "https://github.com/Goctionni/KinkList#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
-    "gulp-sass": "^3.1.0"
+    "gulp-cssnano": "^2.1.2",
+    "gulp-rollup": "^2.11.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sass-glob-import": "^0.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^2.1.2",
+    "vinyl-ftp": "^0.6.0"
   }
 }
